# UniversityStuff

./: .RData  .Rhistory  .gitignore  README.md  Копия_блокнота_"SVM".ipynb
Algorithms(Vergunova)/Lab2/: kaLab2.sln  каЗвіт Лаба 2 Шевченко МІ-3.docx
CloudPARCS(Derevianchenko)/FaceRecognitionApiExample/: FaceRecognitionApiExample.sln
CloudPARCS(Derevianchenko)/RhoPollardParcs/: README.md
CloudPARCS(Derevianchenko)/TranslateAPI/: pom.xml
Course_Project/: Course_Project.sln
Course_Project/Course_Project/: Course_Project.csproj  Program.cs  Startup.cs  appsettings.json
Cryptography/: README.MD
Cryptography(Marynych_Anisimov)/LongAryphm/: CMakeLists.txt  LongAryphm.sln
Cryptography(Marynych_Anisimov)/LongAryphm/LongAryphm/: LongAryphm.vcxproj  LongAryphm.vcxproj.filters  LongInts.cpp
Cryptography(Marynych_Anisimov)/LongMathematic/: LongMathematic.sln
Cryptography/NumbTheorCrypto/: List.cpp  (+1 more)
EEPM/: LAB5EEPM.ipynb
Entrepreneurship/: spaceX_Volokhovych.docx  spaceX_Volokhovych.pptx
InformationSystem(Hlybovets)/: README.MD
Management/: LabVergun.xlsx
NumericalMethods(Timoshenko, Typescript)/: Lab2_Nekriach.docx  Lab3_Nekriach_V8_Remastered (2).docx  Звіт 4.docx  Звіт ЧМ (Некряч).docx
Summer_Practice_Paraphraze/: dependency-reduced-pom.xml  pom.xml
VoronoyDiagram/: LICENSE  README.md  deloney_biuld.cpp  equation.cpp  equation.h  geometry.cpp  lab_ogkg.pro  line.cpp  line.h  main.cpp  neighbourstorage.cpp  neighbourstorage.h  point .cpp  point.cpp  point.h  pointstate.cpp  pointstate.h  renderarea.cpp  renderarea.h  window.cpp  window.h  window.ui
(+944 files in other folders)
